--- a/YumYumDeliv/yum_deliv/static/css/homepage.css
+++ b/YumYumDeliv/yum_deliv/static/css/homepage.css
@@ -209,3 +209,9 @@
         .delete-btn:hover {
             background-color: #c82333;
         }
+
+        .container{
+            margin: 0 0 0 0;
+            padding: 0;
+            align-content: center;
+        }
